# OpenGL-Game-Engine

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Collision.h  ECS.h  InputHandler.h  InputManager.h  Light.h  Mesh.h  Model.h  ModelFactory.h  Physics.h  Renderer.h  Shader.h  Texture.h  Transform.h
shaders/: frag.glsl  lightFrag.glsl  objFrag.glsl  simplefrag.glsl  simplevert.glsl  vert.glsl
src/: Camera.cpp  Collision.cpp  InputHandler.cpp  InputManager.cpp  Light.cpp  Mesh.cpp  Model.cpp  ModelFactory.cpp  Physics.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Transform.cpp  main.cpp
